@@ -12,6 +12,8 @@ User-visible changes in version 0.9.5  (2010-  -  ):
   info_numeric_format -> numeric_format
   logfile, log_full
   removed guess_at_center_pm
+* added syntax: delete file 'filename' (no error if there is no such file)
+
 
 User-visible changes in version 0.9.4  (2010-10-09):
 * removed syntax `delete[range]', use `delete(condition)' instead
